--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-onerror": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
-    "phantomjs-prebuilt": "^2.1.16"
+    "phantomjs-prebuilt": "^2.1.16",
+    "uuid": "^3.2.1"
   }
 }
